websocket send to react how many users online

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -92,3 +92,8 @@ body {
     .notification{
       padding:20px
     }
+    .connection-num{
+      float: right;
+      font-size: medium;
+      margin: 20px auto
+    }
