--- a/styles/home.scss
+++ b/styles/home.scss
@@ -90,7 +90,9 @@ body {
       text-decoration: none;
     }
     .notification{
-      padding:20px
+      padding:20px;
+      font-style:italic;
+
     }
     .connection-num{
       float: right;
