--- a/styles/home.scss
+++ b/styles/home.scss
@@ -100,7 +100,7 @@ body {
       margin: 20px auto;
     }
     img {
-      width: 100px;
+      width: auto;
       max-width: 60%;
       height: auto;
     }
